# ankigen-bcs2

./: .gitignore  README.md  env.example  prompts.py  pyproject.toml
anki_vocab/: __init__.py  cli.py  config.py  image_fetcher.py  models.py  openai_client.py  pexels_client.py  pipeline.py  prompts.py  utils.py
assets/: init-prompt.md
data/: input_words.txt
output/: COPY_ME_TO_COLLECTION_MEDIA.sh  anki_cards.csv
tests/: __init__.py  conftest.py  test_models.py
tests/live/: test_roundtrip.py
